crates/cribo/tests/snapshots/execution_results@stickytape_single_file.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_single_file/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello",
    stderr: "",
}
