crates/cribo/tests/snapshots/execution_results@submodule_imports_parent_function.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/submodule_imports_parent_function/main.py
---
ExecutionResults {
    status: Success,
    stdout: "computed: base",
    stderr: "",
}
