crates/cribo/tests/snapshots/execution_results@symbol_usage_optimization.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/symbol_usage_optimization/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Formatted: test",
    stderr: "",
}
