crates/cribo/tests/snapshots/execution_results@symlink_circular_dependency.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/symlink_circular_dependency/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Testing symlink circular dependency handling\nfuncA result: A calls B calls Actually funcA pretending to be funcC\nChain: A -> B -> C(symlink to A)\nSUCCESS: Symlink circular dependency handled correctly!",
    stderr: "",
}
