crates/cribo/tests/snapshots/execution_results@symlink_multi_circular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/symlink_multi_circular/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Testing multi-symlink circular dependency\nChain result: A -> B -> C(->A) -> D(->B) -> E(->A)\nSUCCESS: Multi-symlink circular dependency handled!",
    stderr: "",
}
