crates/cribo/tests/snapshots/execution_results@test_all_exports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/test_all_exports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Helper result: helper_result\nUtility value: test\ntest_all_exports_complete",
    stderr: "",
}
