crates/cribo/tests/snapshots/execution_results@tree_shake_side_effect_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/tree_shake_side_effect_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "mypackage initialized\nTest completed",
    stderr: "",
}
